# CodeLikeAProInRust

./: .gitignore  README.md
ch02/build-script-example/: Cargo.toml  build.rs
ch02/build-script-example/src/: hello_world.c  lib.rs  main.rs
ch02/dolphins-are-cool/: Cargo.toml
ch02/narwhales-are-real/: Cargo.toml
ch02/narwhals-are-real/: Cargo.toml
ch02/patch-num-cpus/: Cargo.toml
ch02/patch-num-cpus/num_cpus/: Cargo.toml
ch02/rustdoc-example/: Cargo.toml
ch02/rustdoc-example/src/: lib.rs
ch02/simple-project/: Cargo.toml
ch02/workspace-example/: Cargo.toml
ch02/workspace-example/subproject/: Cargo.toml
ch02/workspaces-example/: Cargo.toml
ch02/workspaces-example/subproject/: Cargo.toml
ch02/zlib_ffi/: Cargo.toml
ch02/zlib_ffi/src/: main.rs
ch02/zlib_wrap/: Cargo.toml
ch02/zlib_wrap/src/: lib.rs  main.rs
ch03/magic_completion/: Cargo.toml
ch03/magic_completion/src/: main.rs
ch04/gz-file/: Cargo.toml
ch04/gz-file/src/: lib.rs
ch05/allocator/: README.md
ch05/allocator/src/: lib.rs  (+1 more)
ch05/basic_allocator/: Cargo.toml
ch05/cfg/: Cargo.toml
ch05/cow_singly_linked_list/: Cargo.toml
ch05/custom_allocator/: Cargo.toml
ch05/double_linked_list/: Cargo.toml
ch05/doubly_linked_list/: Cargo.toml
ch05/pass_thru_allocator/: Cargo.toml
ch05/singly_linked_list/: Cargo.toml
ch06/fizzbuzz/: Cargo.toml
ch06/global_counter/: Cargo.toml
ch06/protest_fizzbuzz/: Cargo.toml  tarpaulin-report.html
ch06/test_add/: .gitignore  Cargo.toml
ch07/fuzz_test/: Cargo.toml
ch07/fuzz_test/fuzz/: Cargo.toml
ch07/fuzz_test/fuzz/fuzz_targets/: fuzz_target_1.rs
ch07/parse_integer/: Cargo.toml
ch07/quicksort/: Cargo.toml
ch08/async_observer/: Cargo.toml
ch08/async_with_sync/: Cargo.toml
ch08/con_para/: Cargo.toml
ch08/con_para2/: Cargo.toml
ch08/fire_and_forget/: Cargo.toml
ch08/join_handle/: Cargo.toml
ch08/sleeping_async_hello_world/: Cargo.toml
ch08/sleeping_sync_hello_world/: Cargo.toml
ch08/tokio-console/: Cargo.toml
ch08/tokio-debug/: Cargo.toml
ch08/tokio_block_on/: Cargo.toml
ch08/tokio_fire_and_forget/: Cargo.toml
ch08/tokio_hello/: Cargo.toml
ch08/tokio_hello_macro/: Cargo.toml
ch08/tokio_parallel/: Cargo.toml
ch08/tokio_spawn_blocking/: Cargo.toml
ch08/tokio_spawn_joinhandle/: Cargo.toml
ch09/api-server/: Cargo.toml  db.sqlite
ch09/api-server/migrations/: 20241205123134_todos.sql
ch09/api-server/src/: api.rs  db.rs  error.rs  lib.rs  main.rs  router.rs  todo.rs  tracing.rs
ch10/api-client/: Cargo.toml
ch10/api-client/src/: main.rs  parse_args.rs
ch11/parallel_rayon/: Cargo.toml
ch11/simd/: Cargo.toml
ch11/vec_copy/: Cargo.toml  README.md
ch11/vec_for_iter/: Cargo.toml  README.md
ch11/vec_memory/: Cargo.toml
(+58 files in other folders)
