[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "macros",
] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
