[package]
name = "api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5" }
colored_json = { version = "5.0" }
http = "1.2"
hyper = { version = "1.5", features = ["client", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.42", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "io-std",
    "net",
] }
yansi = "1.0"
