[package]
name = "api-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = "4.5.37"
colored_json = "5.0.0"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.11", features = ["client", "client-legacy", "http1"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "parking_lot", "io-util", "io-std", "net"] }
yansi = "1.0.1"
